--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     
     <groupId>com.drewpwercraft.swear</groupId>
 	<artifactId>Swear</artifactId>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.1-SNAPSHOT-b{$BUILD_NUMBER}</version>
 	<name>Swear</name>
     <description>Swear Jar</description>
     
@@ -89,8 +89,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.0.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
