--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: Swear
 main: com.drewpercraft.swear.Swear
-version: 1.1
+version: maven-version-number
 author: hitechwizard
 website: www.drewpercraft.com
 description: Get rid of curse words from your server!
